--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.17.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5"
   }
 }
