--- a/client/react-estate-ui/package.json
+++ b/client/react-estate-ui/package.json
@@ -19,6 +19,7 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
+    "react-share": "^5.1.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.71.1",
     "socket.io-client": "^4.7.5",
